--- a/ZCMobileDemo.Lite/ZCMobileDemo.Lite/ZCMobileDemo.Lite/Views/MasterDetailControl.xaml
+++ b/ZCMobileDemo.Lite/ZCMobileDemo.Lite/ZCMobileDemo.Lite/Views/MasterDetailControl.xaml
@@ -1,8 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ZCMobileDemo.Lite.Views.MasterDetailControl"
-             x:Name="Parent" IsEnabled="{Binding IsPageEnabled}">
+<?xml version="1.0" encoding="utf-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ZCMobileDemo.Lite.Views.MasterDetailControl" x:Name="Parent" IsEnabled="{Binding IsPageEnabled}">
     <AbsoluteLayout>
         <Grid x:Name="masterGrid" AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="All" ColumnSpacing="1" RowSpacing="1">
             <Grid.RowDefinitions>
@@ -15,18 +12,14 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="{Binding SideContentWidth}" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-
             <ScrollView x:Name="scrollContent" IsVisible="{Binding SideContentVisible, Source={x:Reference Name=Parent},Mode=TwoWay}" Grid.Row="1">
-                <StackLayout Grid.Column="0" x:Name="SideContentContainer"
-                 WidthRequest="250"
-                 IsVisible="{Binding SideContentVisible, Source={x:Reference Name=Parent},Mode=TwoWay}" BackgroundColor="#01446b" Grid.Row="1"/>
+                <StackLayout Grid.Column="0" x:Name="SideContentContainer" WidthRequest="250" IsVisible="{Binding SideContentVisible, Source={x:Reference Name=Parent},Mode=TwoWay}" BackgroundColor="#01446b" Grid.Row="1" />
             </ScrollView>
-            <!--<StackLayout  Grid.Column="1" Grid.Row="0" Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="StartAndExpand" BackgroundColor="Chocolate">-->
-            <Grid Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Chocolate">
+            <Grid x:Name="headerGridRow" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Chocolate">
                 <Grid.RowDefinitions>
                     <RowDefinition>
                         <RowDefinition.Height>
@@ -37,22 +30,22 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Image Source="menumedium.png" HeightRequest="20"  Grid.Column="0" IsVisible="{Binding HamburgerVisibility}">
+                <Image Source="menumedium.png" HeightRequest="20" Grid.Column="0" IsVisible="{Binding HamburgerVisibility}">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
                     </Image.GestureRecognizers>
                 </Image>
-                <Image Source="back.png" HeightRequest="20"  Grid.Column="1" IsVisible="{Binding BackButtonVisibility}">
+                <Image Source="back.png" HeightRequest="20" Grid.Column="1" IsVisible="{Binding BackButtonVisibility}">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="TapGestureRecognizerBack_Tapped" />
                     </Image.GestureRecognizers>
                 </Image>
-                <Label x:Name="dotdotdot" HeightRequest="20" Text="..." FontSize="Large" VerticalOptions="CenterAndExpand" HorizontalOptions="End" Grid.Column="2" Margin="0,0,22,0" Grid.ColumnSpan="{Binding DetailGridHeaderColSpan}"  IsVisible="True">
+                <Label x:Name="dotdotdot" HeightRequest="20" Text="..." FontSize="Large" VerticalOptions="CenterAndExpand" HorizontalOptions="End" Grid.Column="2" Margin="0,0,22,0" Grid.ColumnSpan="{Binding DetailGridHeaderColSpan}" IsVisible="True">
                 </Label>
                 <Label x:Name="headerTitle" HeightRequest="20" Text="{Binding Header}" BackgroundColor="Red" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" Grid.Column="2" Grid.ColumnSpan="{Binding DetailGridHeaderColSpan}" IsVisible="True">
                 </Label>
@@ -61,12 +54,11 @@
                 <Label x:Name="dotdotdot1" HeightRequest="20" Text="..." FontSize="Large" VerticalOptions="CenterAndExpand" HorizontalOptions="End" Grid.Column="3" Margin="0,0,22,0" IsVisible="{Binding SecondContentVisibility}">
                 </Label>
             </Grid>
+            <!--<StackLayout x:Name="MainDetailContainer" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal" BackgroundColor="Red">-->
+                <ContentView Grid.Column="1" x:Name="DetailContainer" BackgroundColor="Khaki" Grid.Row="1" Grid.ColumnSpan="{Binding DetailGridColSpan}" IsVisible="True" />
+                <ContentView Grid.Column="2" x:Name="DetailContainer1" BackgroundColor="LightCoral" Grid.Row="1" IsVisible="{Binding SecondContentVisibility}" />
             <!--</StackLayout>-->
-            <ContentView Grid.Column="1"  x:Name="DetailContainer" BackgroundColor="Khaki" Grid.Row="1" Grid.ColumnSpan="{Binding DetailGridColSpan}"  IsVisible="True"/>
-            <ContentView Grid.Column="2"  x:Name="DetailContainer1" BackgroundColor="LightCoral" Grid.Row="1" IsVisible="{Binding SecondContentVisibility}"/>
             <!--<ContentView Grid.Column="2"  x:Name="DetailContainer1" BackgroundColor="Gray" Grid.Row="1" IsVisible="{Binding SecondDetailPageVisible, Source={x:Reference Name=Parent}"/>-->
-
-
             <!--<StackLayout Grid.Column="1" Grid.Row="1" Orientation="Horizontal" VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand">
             <ContentView  x:Name="DetailContainer" BackgroundColor="White"/>
             <ContentView x:Name="DetailContainer1" BackgroundColor="Gray" IsVisible="{Binding SecondContentVisibility, Source={x:Reference Name=Parent},Mode=TwoWay}"/>
@@ -74,7 +66,8 @@
         </Grid>
         <!-- Overlay -->
         <ContentView x:Name="overlay" AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="All" IsVisible="{Binding IsExecuting}" BackgroundColor="Transparent">
-            <ActivityIndicator x:Name="activityIndicator" IsRunning="{Binding IsExecuting}" IsVisible="{Binding IsExecuting}" BackgroundColor="Transparent" HeightRequest="300" WidthRequest="300"></ActivityIndicator>
+            <ActivityIndicator x:Name="activityIndicator" IsRunning="{Binding IsExecuting}" IsVisible="{Binding IsExecuting}" BackgroundColor="Transparent" HeightRequest="300" WidthRequest="300">
+            </ActivityIndicator>
         </ContentView>
     </AbsoluteLayout>
 </ContentPage>
