--- a/ZCMobileDemo.Lite/ZCMobileDemo.Lite/ZCMobileDemo.Lite/Views/MasterDetailControl.xaml
+++ b/ZCMobileDemo.Lite/ZCMobileDemo.Lite/ZCMobileDemo.Lite/Views/MasterDetailControl.xaml
@@ -19,7 +19,7 @@
             <ScrollView x:Name="scrollContent" IsVisible="{Binding SideContentVisible, Source={x:Reference Name=Parent},Mode=TwoWay}" Grid.Row="1">
                 <StackLayout Grid.Column="0" x:Name="SideContentContainer" WidthRequest="250" IsVisible="{Binding SideContentVisible, Source={x:Reference Name=Parent},Mode=TwoWay}" BackgroundColor="#01446b" Grid.Row="1" />
             </ScrollView>
-            <Grid x:Name="headerGridRow" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Chocolate">
+            <Grid x:Name="headerGridRow" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Chocolate" TranslationX="{Binding DetailContainerAndHeaderGridRowLeft,Mode=TwoWay}" WidthRequest="{Binding HeaderGridRowWidth,Mode=TwoWay}">
                 <Grid.RowDefinitions>
                     <RowDefinition>
                         <RowDefinition.Height>
@@ -55,8 +55,8 @@
                 </Label>
             </Grid>
             <!--<StackLayout x:Name="MainDetailContainer" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal" BackgroundColor="Red">-->
-                <ContentView Grid.Column="1" x:Name="DetailContainer" BackgroundColor="Khaki" Grid.Row="1" Grid.ColumnSpan="{Binding DetailGridColSpan}" IsVisible="True" />
-                <ContentView Grid.Column="2" x:Name="DetailContainer1" BackgroundColor="LightCoral" Grid.Row="1" IsVisible="{Binding SecondContentVisibility}" />
+                <ContentView Grid.Column="1" x:Name="DetailContainer" BackgroundColor="Khaki" Grid.Row="1" Grid.ColumnSpan="{Binding DetailGridColSpan}" IsVisible="True" TranslationX="{Binding DetailContainerAndHeaderGridRowLeft,Mode=TwoWay}" WidthRequest="{Binding DetailContainerWidth,Mode=TwoWay}" />
+                <ContentView Grid.Column="2" x:Name="DetailContainer1" BackgroundColor="LightCoral" Grid.Row="1" IsVisible="{Binding SecondContentVisibility}" TranslationX="{Binding DetailContainer1Left}" WidthRequest="{Binding DetailContainer1Width}" />
             <!--</StackLayout>-->
             <!--<ContentView Grid.Column="2"  x:Name="DetailContainer1" BackgroundColor="Gray" Grid.Row="1" IsVisible="{Binding SecondDetailPageVisible, Source={x:Reference Name=Parent}"/>-->
             <!--<StackLayout Grid.Column="1" Grid.Row="1" Orientation="Horizontal" VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand">
